更新.gitlab-ci.yml文件

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ deploy-job:      # This job runs in the deploy stage.
   script:
     - echo "building wiki..."
     - yarn install
+    - yarn add @docusaurus/core @docusaurus/preset-classic
     - yarn build
     - sudo cp rsync -avh ./build /home/zhengb/wiki
     - sudo chown -R zhengb:zhengb /home/zhengb/wiki
