fix: add identity config for gh-pages deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,51 @@
-name: Deploy Docusaurus to GitHub Pages
+name: Deploy Docusaurus to GitHub Pages (peaceiris)
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main          # 监听 main 分支推送
+
+######################################################################
+# 让 workflow 自带的 GITHUB_TOKEN 拥有写入权限，才能推送到 gh-pages 分支
+######################################################################
+permissions:
+  contents: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1) 检出源码
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set Git Identity
-        run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
-
+      # 2) 安装 Node.js（缓存 yarn 依赖）
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: yarn
 
+      # 3) 安装依赖
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Build site
+      # 4) 构建 Docusaurus 静态文件，输出到 ./build
+      - name: Build website
         run: yarn build
 
+      # 5) 发布到 gh-pages 分支
       - name: Deploy to GitHub Pages
-        env:
-          GIT_USER: camthink-ai
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USE_SSH: "false"
-        run: |
-          git config --global url."https://github.com/".insteadOf git@github.com:
-          git config --global url."https://github.com/".insteadOf ssh://git@github.com/
-          yarn deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          # GitHub 会在运行时自动注入一个临时令牌
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build        # 与 Docusaurus 默认输出路径保持一致
+          publish_branch: gh-pages    # 不需要自己先创建
+          user_name: GitHub Action    # 提交记录身份
+          user_email: action@github.com
+          commit_message: |
+            docs: deploy ${{ github.sha }} via GitHub Actions
+          # 如果有自定义域名，取消下一行注释
+          # cname: docs.example.com
