--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@docusaurus/plugin-client-redirects": "3.6.1",
     "@docusaurus/core": "3.6.1",
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-mermaid": "^3.6.1",
