--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,10 @@
-name: Deploy Docusaurus to GitHub Pages (peaceiris)
+name: Deploy Docusaurus to GitHub Pages and Cloud Server
 
 on:
   push:
     branches:
-      - main          # 监听 main 分支推送
+      - main
 
-######################################################################
-# 让 workflow 自带的 GITHUB_TOKEN 拥有写入权限，才能推送到 gh-pages 分支
-######################################################################
 permissions:
   contents: write
 
@@ -16,36 +13,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) 检出源码
+      # 1. 检出源码
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2) 安装 Node.js（缓存 yarn 依赖）
+      # 2. 安装 Node.js（并缓存 yarn 依赖）
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: yarn
 
-      # 3) 安装依赖
+      # 3. 安装依赖
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      # 4) 构建 Docusaurus 静态文件，输出到 ./build
+      # 4. 构建 Docusaurus 静态网站
       - name: Build website
         run: yarn build
 
-      # 5) 发布到 gh-pages 分支
+      # 5. 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          # GitHub 会在运行时自动注入一个临时令牌
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build        # 与 Docusaurus 默认输出路径保持一致
-          publish_branch: gh-pages    # 不需要自己先创建
-          user_name: GitHub Action    # 提交记录身份
+          publish_dir: ./build
+          publish_branch: gh-pages
+          user_name: GitHub Action
           user_email: action@github.com
           commit_message: |
             docs: deploy ${{ github.sha }} via GitHub Actions
-          # 如果有自定义域名，取消下一行注释
-          # cname: docs.example.com
+
+      # 6. 使用 rsync 部署到云服务器
+      - name: Deploy to Cloud Server via SSH (rsync)
+        uses: burnett01/rsync-deployments@5.2
+        with:
+          switches: -avzr --delete
+          path: ./build/
+          remote_path: ${{ secrets.TARGET_PATH }}
+          remote_host: ${{ secrets.SERVER_HOST }}
+          remote_user: ${{ secrets.SERVER_USER }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
