--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,13 @@ jobs:
 
       # 4. 构建 Docusaurus 静态网站
       - name: Build website
+        env:
+          NODE_ENV: production
+          GITHUB_ACTIONS: true
+          GITHUB_PAGES: true
+          DEPLOY_ENV: github
+          BASE_URL: /wiki-test/
+          SITE_URL: https://zhenglingpeng.github.io
         run: yarn build
 
       # 5. 部署到 GitHub Pages
