--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,22 @@ on:
     branches:
       - main
       
-  # 2. 手动触发：在 GitHub Actions 页面显示“Run workflow”按钮
+  # 2. 手动触发：在 GitHub Actions 页面显示"Run workflow"按钮
   workflow_dispatch:
+    inputs:
+      deploy_confirm:
+        description: '🚀 确认部署到云服务器'
+        required: true
+        type: choice
+        options:
+          - '✅ 确认部署'
+          - '❌ 取消'
+        default: '❌ 取消'
+      deploy_note:
+        description: '📝 部署备注（可选）'
+        required: false
+        type: string
+        default: '手动触发部署'
 
 permissions:
   contents: write
@@ -68,10 +82,19 @@ jobs:
   deploy_to_cloud_server:
     name: ☁️ Deploy to Cloud Server (Manual)
     runs-on: ubuntu-latest
-    # 仅在 Actions 页面点击“Run workflow”按钮时运行
-    if: github.event_name == 'workflow_dispatch'
+    # 仅在 Actions 页面点击"Run workflow"按钮时运行，且用户确认部署
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_confirm == '✅ 确认部署'
 
     steps:
+      # 0. 显示部署信息
+      - name: 0. Display deployment info
+        run: |
+          echo "🚀 开始部署到云服务器"
+          echo "📝 部署备注: ${{ github.event.inputs.deploy_note }}"
+          echo "👤 触发用户: ${{ github.actor }}"
+          echo "🔖 提交 SHA: ${{ github.sha }}"
+          echo "📅 触发时间: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
+      
       # 1. 检出源码 (手动触发时也需要重新检出代码)
       - name: 1. Checkout repository
         uses: actions/checkout@v3
