--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,22 +6,8 @@ on:
     branches:
       - main
       
-  # 2. 手动触发：在 GitHub Actions 页面显示"Run workflow"按钮
+  # 2. 手动触发：在 GitHub Actions 页面显示“Run workflow”按钮
   workflow_dispatch:
-    inputs:
-      deploy_confirm:
-        description: '🚀 确认部署到云服务器'
-        required: true
-        type: choice
-        options:
-          - '✅ 确认部署'
-          - '❌ 取消'
-        default: '❌ 取消'
-      deploy_note:
-        description: '📝 部署备注（可选）'
-        required: false
-        type: string
-        default: '手动触发部署'
 
 permissions:
   contents: write
@@ -59,8 +45,8 @@ jobs:
           GITHUB_ACTIONS: true
           GITHUB_PAGES: true
           DEPLOY_ENV: github
-          BASE_URL: /wiki-test/
-          SITE_URL: https://zhenglingpeng.github.io
+          BASE_URL: /wiki-documents/
+          SITE_URL: https://camthink-ai.github.io
         run: yarn build
 
       # 5. 部署到 GitHub Pages
@@ -82,19 +68,10 @@ jobs:
   deploy_to_cloud_server:
     name: ☁️ Deploy to Cloud Server (Manual)
     runs-on: ubuntu-latest
-    # 仅在 Actions 页面点击"Run workflow"按钮时运行，且用户确认部署
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_confirm == '✅ 确认部署'
+    # 仅在 Actions 页面点击“Run workflow”按钮时运行
+    if: github.event_name == 'workflow_dispatch'
 
     steps:
-      # 0. 显示部署信息
-      - name: 0. Display deployment info
-        run: |
-          echo "🚀 开始部署到云服务器"
-          echo "📝 部署备注: ${{ github.event.inputs.deploy_note }}"
-          echo "👤 触发用户: ${{ github.actor }}"
-          echo "🔖 提交 SHA: ${{ github.sha }}"
-          echo "📅 触发时间: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
-      
       # 1. 检出源码 (手动触发时也需要重新检出代码)
       - name: 1. Checkout repository
         uses: actions/checkout@v3
@@ -118,7 +95,7 @@ jobs:
           GITHUB_PAGES: false
           DEPLOY_ENV: production
           BASE_URL: /
-          SITE_URL: http://42.194.138.11:3002
+          SITE_URL: https://wiki.camthink.ai
         run: yarn build
 
       # 7. 使用 rsync 部署到云服务器
