--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/plugin-client-redirects": "3.6.1",
     "@docusaurus/core": "3.6.1",
+    "@docusaurus/plugin-client-redirects": "3.6.1",
+    "@docusaurus/plugin-google-tag-manager": "^3.9.2",
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-mermaid": "^3.6.1",
     "@easyops-cn/docusaurus-search-local": "^0.49.2",
