--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,10 +77,10 @@ jobs:
         with:
           switches: -avzr --delete
           path: ./build/
-          remote_path: ${{ secrets.TEST_SERVER_PATH }}
-          remote_host: ${{ secrets.TEST_SERVER_HOST }}
-          remote_user: ${{ secrets.TEST_SERVER_USER }}
-          remote_key: ${{ secrets.TEST_SERVER_SSH_KEY }}
+          remote_path: ${{ secrets.TARGET_PATH }}
+          remote_host: ${{ secrets.SERVER_HOST }}
+          remote_user: ${{ secrets.SERVER_USER }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
           
   # =======================================================
   # JOB 2: 手动部署到云服务器
